# nccs-transport

./: README.md  pyproject.toml
data/: StationPositionsMidshelf.csv
notebooks/: satellite_analysis.ipynb  satellite_tracks_kmeans.ipynb  satellite_tracks_viz.ipynb  tracks_analysis.ipynb
notebooks/python/: satellite_analysis.py  satellite_tracks_kmeans.py  satellite_tracks_viz.py  tracks_analysis.py
scripts/: altimeter_tracking.py  calculate_velocities.py  download_aviso.py  download_mdt.py  download_oscar.py  forward_altimeter_tracking.py  forward_altimeter_tracking_linux.py  landmask.py  make_year_animation.py  model_tracking.py  overwrite_cli.py  process_trajectories.py  run_altimeter_tracking.py  run_forward_tracking.py  run_model_tracking.py  run_surface_model_tracking.py  surface_model_tracking.py  utils.py
