[project]
name = "nccs-transport"
version = "0.1.0"
readme = "README.md"
requires-python = ">3.11"
dependencies = [
    "cartopy>=0.24.1",
    "copernicusmarine>=2.1.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "paramiko>=3.5.1",
    "parcels>=3.1.2",
    "python-dotenv>=1.1.1",
    "xarray[accel,io,parallel]>=2025.7.0",
]
authors = [{ name = "Andrew Scherer", email = "andrew@sourcedepth.com" }]
license = "MIT"
