[project]
name = "nccs-transport"
version = "0.1.0"
readme = "README.md"
requires-python = ">3.11"
dependencies = [
    "cartopy>=0.24.1",
    "cmocean>=4.0.3",
    "copernicusmarine>=2.1.3",
    "emu-utilities>=0.1.0",
    "imageio-ffmpeg>=0.6.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "paramiko>=3.5.1",
    "parcels>=3.1.4",
    "python-dotenv>=1.1.1",
    "tqdm>=4.67.1",
    "xarray[accel,io,parallel]>=2025.7.0",
    "zarr<3",
]
authors = [{ name = "Andrew Scherer", email = "andrew@sourcedepth.com" }]
license = "MIT"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "scripts" }

[tool.setuptools.packages.find]
where = ["scripts"]

[tool.ty.environment]
root = ["./scripts"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "T201",   # print statements in code
    "RET504", # unnecessary assignment for return
    "D203",   # incorrect blank line before class
    "D213",   # multi-line summary second line
    "CPY001", # missing copyright notice
]

[tool.ruff.lint.extend-per-file-ignores]
"notebooks/*.py" = [
    "T201",   # print statements in code
    "B018",   # useless-expression; useful in notebooks
    "ERA001", # commented-out-code; can't use with jupytext
    "D100",   # undocumented-public-module
    "INP001", # implicit-namespace-package
]

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.isort]
known-first-party = [
    "scripts",
    "utils",
    "forward_altimeter_tracking",
    "overwrite_cli",
    "altimeter_tracking",
    "model_tracking",
]
